// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`binary-upload-input renders correctly (binary available) 1`] = `
<div
  onClick={[MockFunction]}
>
  <div
    className="css-v9ow79-Paper"
  >
    <div
      className="css-l0jg45-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
    />
    <div
      className="css-1sbf56p-Text"
    >
      mock-file.png
    </div>
    <div
      className="css-1c0443q-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`binary-upload-input renders correctly (disabled) 1`] = `
<div
  onClick={[MockFunction]}
>
  <div
    className="css-v9ow79-Paper"
  >
    <div
      className="css-l0jg45-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
    />
    <div
      className="css-1sbf56p-Text"
    >
      mock-file.png
    </div>
    <div
      className="css-2fqzsq-Text"
      onClick={[MockFunction]}
    >
      files_and_directories__open_in_viewer
    </div>
  </div>
</div>
`;

exports[`binary-upload-input renders correctly 1`] = `
<div
  className="binary-input css-m27hme-BinaryUploadInput"
>
  <div
    className="css-1baflxz-BinaryUploadInput"
  >
    <div
      className="css-1p4ztl7-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
    />
    <div
      className="css-1tx9eo9-Text"
    >
      binary_input__placeholder_label
    </div>
  </div>
  <div
    className="css-0"
    id="tooltip_42"
  >
    <button
      className="css-1cywa3f-Button"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-mj8vo1-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
      </div>
    </button>
  </div>
  <div
    className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
    role="tooltip"
    style={
      {
        "backgroundColor": "#2e3032",
        "zIndex": 1,
      }
    }
  >
    binary_input__upload_title
    <div
      className="react-tooltip-arrow styles-module_arrow__K0L3T"
      style={{}}
    />
  </div>
</div>
`;
